# glfw-project-template

./: .gitignore  CMakeLists.txt  FindGLFW.cmake  README.md  init.sh  main.cpp
